--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
 		"eslint-plugin-svelte": "^2.26.0",
 		"highlight.js": "^11.8.0",
 		"postcss": "^8.4.25",
-		"prettier": "^2.8.0",
+		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.8.1",
+		"prettier-plugin-tailwindcss": "^0.4.1",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"tailwindcss": "^3.3.2",
